Overflow is now working on the active monster cards. the issue was that two divs needed the overflow property. I don't actually know the specification that has to do with this, it was an acident figuring it out.

--- a/src/app/monster/components/active-monster-card/active-monster-card.component.scss
+++ b/src/app/monster/components/active-monster-card/active-monster-card.component.scss
@@ -44,9 +44,10 @@ $topSectionHeight: 36%;
           height: calc(100% - $topSectionHeight);
 
           .token-list-wrapper {
+            overflow: auto;
+
             .token-list {
-              max-height: 11rem;
-              overflow-y: auto;
+              overflow: auto;
             }
           }
         }
